syntax = "proto3";

package task;

option java_package = "com.mera.education.grpc.proto.task";
option java_multiple_files = true;

message Task {
    double number = 1;

};

message TaskRequest {
    Task task = 1;
};

message TaskResponse {
    double result = 1;
};

message TaskManyTimesRequest {
    Task task = 1;
};

message TaskManyTimesResponse {
    double result = 1;
};

message LongTaskRequest {
    Task task = 1;
};

message LongTaskResponse {
    double result = 1;
};

message TaskEveryoneRequest {
    Task task = 1;
};

message TaskEveryoneResponse {
    double result = 1;
};

service TaskService {
    rpc Task(TaskRequest) returns (TaskResponse) {};
    rpc TaskManyTimes(TaskManyTimesRequest) returns (stream TaskManyTimesResponse) {};
    rpc LongTask(stream LongTaskRequest) returns (LongTaskResponse) {};
    rpc TaskEveryone(stream TaskEveryoneRequest) returns (stream TaskEveryoneResponse) {};
};

